# turs_ws

./: .gitignore  Cargo.toml  turs_ws.code-workspace
scripts/: test.sh
src/: client copy.rs  client.rs  lib.rs  main.rs  server copy.rs  server.rs  tests.rs
src/tests/: all.rs  client.rs  server.rs  test.rs  ws_client.rs
src/ws/: axios.rs  client copy 2.rs  client copy 3.rs  client copy.rs  server.rs
tutest/: Cargo.toml
tutest/src/: main copy.rs  main.rs
tutest_server/: Cargo.toml
tutest_server/src/: main.rs
