[package]
name = "turs_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3"
futures-util = "0.3.31"
tokio-tungstenite = {version = "*", features = ["native-tls"]}
tungstenite = { version = "*", features = ["native-tls"] }

[dependencies.turs]
version = "0.1.0"
# path = "../turs"
git = "https://github.com/tonnidiaz/turs.git"
